# Local-TTS-studio

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  desktop.html  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.node.json  vite.buildRustBridge.test.ts  vite.config.ts  vite.devServer.test.ts  vite.inferenceSpeedEval.test.ts  vite.kokoroAssets.test.ts  vite.kokoroAssets.ts  vite.onnxRuntimeVersion.test.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release-desktop.yml  rust-bridge.yml
docs/: architecture.md  design-system.md  launch-plan-2026-07.md  local-runtimes.md  performance.md  releasing.md
electron/: appProtocol.test.ts  appProtocol.ts  documentImport.test.ts  documentImport.ts  epubTransfer.test.ts  epubTransfer.ts  generateRateLimiter.test.ts  generateRateLimiter.ts  hfXetDownload.test.ts  hfXetDownload.ts  localTtsBridge.test.ts  localTtsIpc.test.ts  localTtsIpc.ts  localTtsLimits.ts  main.ts  persistentBridgeWorker.test.ts  persistentBridgeWorker.ts  preload.ts  pythonRuntime.test.ts  pythonRuntime.ts  qwen3MlxDownload.test.ts  qwen3MlxDownload.ts  qwen3ModelDownload.test.ts  qwen3ModelDownload.ts  qwen3ProfileCli.ts  qwen3Profiles.test.ts  qwen3Profiles.ts  qwen3Profiling.test.ts  qwen3Profiling.ts  qwen3Vendor.test.ts  rustLocalBridge.test.ts  security.test.ts  security.ts  urlImport.test.ts  urlImport.ts  webSocketBridgeWorker.test.ts  webSocketBridgeWorker.ts
patches/qwen3_tts_rs/: mlx-api-current-thread.patch
public/: inference-speed.html
python/: local_tts_bridge.py
rust/local-tts-bridge/: Cargo.toml
rust/local-tts-bridge/examples/: probe_encoder.rs
rust/local-tts-bridge/src/: main.rs  neucodec_encoder.rs  reference_audio.rs
rust/local-tts-bridge/src/qwen3/: config.rs  mod.rs  model_files.rs  reference.rs  runtime.rs  text.rs
scripts/: build-qwen3-mlx-worker.mjs  build-rust-bridge.mjs  inference-speed-electron.mjs  inference-speed-eval.mjs  inference-speed-output.mjs  rust-target-dir.mjs  test-rust-bridge.mjs
src/: App.test.tsx  App.tsx  constants.test.ts  constants.ts  electron.d.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src/components/: AdvancedReaderPage.test.tsx  AdvancedReaderPage.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  AppSettingsDialog.test.tsx  AppSettingsDialog.tsx  AudioPlayer.test.tsx  AudioPlayer.tsx  Controls.test.tsx  Controls.tsx  ControlsContext.tsx  CreatorToolsPanel.test.tsx  CreatorToolsPanel.tsx  DownloadProgress.test.tsx  DownloadProgress.tsx  LocalRuntimePage.test.tsx  LocalRuntimePage.tsx  ModelToggle.test.tsx  ModelToggle.tsx  Qwen3InlineSettings.tsx  ReaderLibrarySidebar.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Supertonic3InlineSettings.test.tsx  Supertonic3InlineSettings.tsx  (+4 more)
(+108 files in other folders)
