[package]
name = "open-tts-local-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
candle-core = "0.9"
clap = { version = "4.5", features = ["derive"] }
hf-hub = { version = "0.4", default-features = false }
hound = "3.5"
neutts = { version = "0.1.1", features = ["espeak"] }
qwen_tts = "0.1.1"
rten = "0.24"
rten-tensor = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
ureq = { version = "2.12", default-features = false }
ctrlc = { version = "3.4", features = ["termination"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
qwen_tts = { version = "0.1.1", features = ["metal"] }
