[package]
name = "open-tts-local-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
neutts = { version = "0.1.1", features = ["espeak"] }
rten = "0.24"
rten-tensor = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
xet = { package = "hf-xet", version = "1.5.3" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
qwen3-tts-rs = { git = "https://github.com/badlogic/qwen3_tts_rs.git", rev = "288a716ce38a91c826dd67968c75d1dd4b0f07bc", default-features = false, features = ["mlx"] }

[target.'cfg(target_os = "windows")'.dependencies]
qwen3-tts-rs = { git = "https://github.com/badlogic/qwen3_tts_rs.git", rev = "288a716ce38a91c826dd67968c75d1dd4b0f07bc", default-features = false, features = ["tch-backend"] }
tch = "0.20"

[dev-dependencies]
tempfile = "3.27"
